--- a/Realtime_Twitter_sentiment.ipynb
+++ b/Realtime_Twitter_sentiment.ipynb
@@ -24,11 +24,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"TiGcHRxN4Zhdbyxr699unen61\"\n",
-    "api_key_secret = \"uyGSWVpvQrilt9zABJJtZ5zNBqWmqWJXbkOz9Zp30s2RUTDjMe\"\n",
-    "bearer = \"AAAAAAAAAAAAAAAAAAAAANTdjQEAAAAA%2F2e%2FlgQWP9vDi3EiXCHoUZRF%2FUc%3D8WATLN76azLkJbrKTxa6rHQKWPLB1JCnIZA5zpKHQ0JQUpzD64\"\n",
-    "access_token = \"1605378234-nVsSnUP38fLS8JrAoZ9uDSxsmF8HN5kbKZAPjRr\"\n",
-    "access_token_secret = \"eMb8leVzc5mtXUJqqBj12WVe7Bd24CCiRIdrvvfyaXXL0\""
+    "api_key = \"\"\n",
+    "api_key_secret = \"\"\n",
+    "bearer = \"\"\n",
+    "access_token = \"\"\n",
+    "access_token_secret = \"\""
    ]
   },
   {
